fix: fix z-index

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -6,6 +6,10 @@ body {
   object-fit: contain;
 }
 
+.toc {
+  z-index: 1;
+}
+
 .full-width img {
   max-width: 105vw;
   max-height: 60vh;
@@ -14,7 +18,6 @@ body {
   position: relative;
   margin: 0 calc(50% - 50vw);
   border-radius: 0;
-  z-index: -1;
 }
 
 @media (max-width: 950px) {
